# test-fast-ai

./: Dockerfile  README.md  notes-docker  pyproject.toml  test-fast-ai.code-workspace
src/example_app/: app.py  fastai-1.ipynb  main.py
src/example_app/model/: CategoryEntity.py  ImageEntity.py
src/example_app/notes/: additionnal.ipynb  fastai-1.ipynb  main.ipynb
src/example_app/router/: ClassificationRouter.py  ImageRouter.py
src/example_app/schema/: CategorySchema.py  ImageSchema.py
src/example_app/services/: ClassificationService.py  ImageService.py
