[tool.poetry]
name = "example-app"
version = "0.1.0"
description = ""
authors = ["DanYan <daniel.adiko@orange.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastai = "^2.7.12"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
httpx = "^0.25.0"
python-multipart = "^0.0.6"
pydantic = "^2.3.0"
python-dotenv = "^1.0.0"
pymongo = "^4.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
